Changes in DOC according to the latest commit.

--- a/DOC/nautilus.bib
+++ b/DOC/nautilus.bib
@@ -112,3 +112,54 @@ archivePrefix = "arXiv",
    adsurl = {http://cdsads.u-strasbg.fr/abs/2015MNRAS.447.4004R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{1996A&A...311..690L,
+   author = {{Lee}, H.-H. and {Herbst}, E. and {Pineau des Forets}, G. and 
+	{Roueff}, E. and {Le Bourlot}, J.},
+    title = "{Photodissociation of H\_2\_ and CO and time dependent chemistry in inhomogeneous interstellar clouds.}",
+  journal = {\aap},
+ keywords = {ISM: CLOUDS, MOLECULES, TMC 1, MOLECULAR PROCESSES, RADIATIVE TRANSFER},
+     year = 1996,
+    month = jul,
+   volume = 311,
+    pages = {690-707},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/1996A%26A...311..690L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013A&A...555A..14L,
+   author = {{Li}, X. and {Heays}, A.~N. and {Visser}, R. and {Ubachs}, W. and 
+	{Lewis}, B.~R. and {Gibson}, S.~T. and {van Dishoeck}, E.~F.
+	},
+    title = "{Photodissociation of interstellar N$_{2}$}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1305.1781},
+ primaryClass = "astro-ph.GA",
+ keywords = {astrochemistry, stars: formation, molecular processes, interplanetary medium, photon-dominated region (PDR), ultraviolet: planetary systems},
+     year = 2013,
+    month = jul,
+   volume = 555,
+      eid = {A14},
+    pages = {A14},
+      doi = {10.1051/0004-6361/201220625},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2013A%26A...555A..14L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009A&A...503..323V,
+   author = {{Visser}, R. and {van Dishoeck}, E.~F. and {Black}, J.~H.},
+    title = "{The photodissociation and chemistry of CO isotopologues: applications to interstellar clouds and circumstellar disks}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0906.3699},
+ primaryClass = "astro-ph.GA",
+ keywords = {astrochemistry, molecular processes, molecular data, ISM: molecules, stars: planetary systems: protoplanetary disks, ISM: clouds},
+     year = 2009,
+    month = aug,
+   volume = 503,
+    pages = {323-343},
+      doi = {10.1051/0004-6361/200912129},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2009A%26A...503..323V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
